tests/baselines/reference/parserForOfStatement6.errors.txt
parserForOfStatement6.ts(1,17): error TS1188: Only a single variable declaration is allowed in a 'for...of' statement.
parserForOfStatement6.ts(1,26): error TS2304: Cannot find name 'X'.


==== parserForOfStatement6.ts (2 errors) ====
    for (var a = 1, b = 2 of X) {
                    ~
!!! error TS1188: Only a single variable declaration is allowed in a 'for...of' statement.
                             ~
!!! error TS2304: Cannot find name 'X'.
    }